# toDus-API

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PROPOSALS.md  LICENSE  MANIFEST.in  README.md  documentacion.html  mkdocs.yml  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  pypi-publish.yml  python-package-conda.yml
docs/: authentication.md  changelog.md  contributing.md  examples_advanced.md  groups.md  index.md  installation.md  quickstart.md  troubleshooting.md
docs/api/: errors.md  parser.md  types_constants.md  utils.md
docs/cache/: overview.md  queue_client.md
docs/client/: mixins.md  overview.md
docs/events/: overview.md
docs/stanzas/: overview.md
docs/stylesheets/: extra.css
examples/: README.md  bot.py  jwt_connect.py  listen_bot.py  offline_first_bot.py  phone_flow.py
test/: test_proxy.py  test_stanzas.py  test_types.py  test_util.py
tests/: __init__.py  test_auth.py  test_base.py  test_cache.py  test_client_events.py  test_events.py  test_parser.py  test_proxy.py  test_stanza.py
todus/: __init__.py  client.py  client_with_queue.py  constants.py  errors.py  group.py  parser.py  scheduler.py  setup.py  stanza.py  types.py  util.py
todus/cache/: README.md  __init__.py  mixin.py  queue.py  store.py
todus/client/: __init__.py  auth.py  base.py  block.py  call.py  channels.py  file.py  last.py  location.py  message.py  privacy.py  profile.py  status.py
todus/events/: __init__.py  bus.py  filters.py
todus/stanzas/: __init__.py  block.py  call.py  channels.py  group.py  last.py  location.py  presence.py  privacy.py  private.py  profile.py  status.py  utils.py
